# tss15

./: package-lock.json  package.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  types.ts
client/src/pages/: Gallery.tsx  Home.tsx  Scheduler.tsx  Worker.tsx
client/src/renderer/: pathTracer.ts  wasmLoader.ts
client/src/services/: socket.ts  webrtc.ts
client/src/store/: renderStore.ts
client/src/styles/: Gallery.css  Home.css  Scheduler.css  Worker.css  global.css
client/src/utils/: gltfParser.ts  tiles.ts
examples/: demo-scene.gltf
raytracer-wasm/: Cargo.toml
raytracer-wasm/src/: camera.rs  hittable.rs  lib.rs  material.rs  plane.rs  ray.rs  scene.rs  sphere.rs  vec3.rs
server/: package-lock.json  package.json
server/src/: galleryStore.js  index.js
