[package]
name = "raytracer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = ["console"] }
rand = "0.8.5"
rand_wasm = "0.2.1"
js-sys = "0.3.66"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
